# paladinai

./: .env.example  .gitignore  LICENSE  Makefile  README.md  diagram.md  flow.d2  pyproject.toml
cli/: LICENSE  banner.py  main.py  pyproject.toml
cli/args/: __init__.py  commands.py  parser.py
cli/client/: __init__.py  base.py  checkpoint.py  health.py  main.py  memory.py  openai.py
cli/utils/: __init__.py  banner.py  formatter.py  loading.py
cli/utils/formatter/: __init__.py  analysis_formatters.py  formatter.py  markdown_formatter.py  utility_formatters.py  workflow_formatters.py
docs/: OPENAI_INTEGRATION.md  SETUP.md  TOOLS.md  api.md  architecture.md  cli.md  deployment.md  discord.md  frontend.md  installation.md  memory.md  monitoring.md  rag.md  troubleshooting.md  workflows.md
frontend/: LICENSE  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/documents/: route.ts
frontend/app/api/sessions/: route.ts
frontend/components/: chat-input.tsx  chat-message.tsx  chat-view.tsx  command-input.tsx  command-message.tsx  debug-content.tsx  sidebar.tsx  theme-toggle.tsx
frontend/lib/: commands.ts  memory.ts  store.ts  table-parser.ts
infra/loki/: README.md  docker-compose.yaml  loki-config.yaml
infra/loki/dashboards/: loki-logs-dashboard.json
infra/memory/: README.md  docker-compose.yml
infra/mock/: Makefile  README.md  docker-compose.yml
infra/mock/backend/: Dockerfile  package.json  server.js
infra/mock/database/: init.sql
infra/mock/docs/: architecture-overview.md  backend-services.md  frontend-service.md  grafana-visualization.md  loki-promtail-logging.md  nginx-proxy-loadbalancer.md  postgresql-database.md  prometheus-alertmanager.md  valkey-cache-queue.md
infra/mock/frontend/: package.json  server.js
infra/mock/loki/: promtail-config.yml
infra/mock/nginx/: default.conf  nginx.conf
infra/mock/prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
infra/prometheus/: alert_rules.yml  alertmanager.yml  docker-compose.yaml  prometheus.yml
infra/scripts/: init-database.js  init-replica-set.js
infra/valkey/: .env.example  README.md  docker-compose.yaml  valkey.conf
infra/webhook_server/: .env.example  README.md  start_webhook.sh  webhook_server.py
mcp/discord-server/: Makefile  README.md  pyproject.toml  start_worker_server.py
mcp/discord-server/discord_mcp/: __init__.py  __main__.py  alert_server.py  enhanced_server.py  paladin_client.py  workers_server.py
mcp/discord-server/discord_mcp/prompts/: __init__.py  discord_bot_prompts.py  guardrail_prompts.py
server/: LICENSE  main.py  pyproject.toml
server/checkpointing/: __init__.py  checkpointer.py  config.py  routes.py  utils.py
server/graph/: __init__.py  alert_workflow.py  workflow.py
server/graph/nodes/: __init__.py  action.py  alert_analysis_nodes.py  categorization.py  error_handler.py  guardrail.py  incident.py  prometheus.py  query.py  result.py  start.py
server/graph/nodes/action/: __init__.py  action.py  analyzers.py  processors.py  serializers.py
server/graph/nodes/alertmanager/: __init__.py  alertmanager.py
server/graph/nodes/incident/: __init__.py  analyzers.py  incident.py  processors.py  serializers.py
server/graph/nodes/loki/: __init__.py  loki.py
server/graph/nodes/prometheus/: __init__.py  data_collector.py  data_processor.py  node.py  prometheus.py  query_generator.py  utils.py
server/graph/nodes/query/: __init__.py  analyzers.py  processors.py  query.py  serializers.py
server/graph/state/: __init__.py  enums.py  models.py  utils.py
server/llm/: __init__.py  openai.py
server/memory/: __init__.py  api.py  extractor.py  models.py  service.py
server/middleware/: __init__.py  error_handler.py
server/models/: __init__.py  requests.py
server/prompts/: __init__.py  prompt_manager.py
server/prompts/agents/: analysis.py  data_collection.py  decision.py  manager.py  reporting.py
server/prompts/alert_analysis/: alert_analysis_prompt.py  alert_context_prompt.py  alert_decision_prompt.py  alert_result_prompt.py  rag_search_prompt.py
server/prompts/data_collection/: __init__.py  action_prompts.py  incident_prompts.py  query_prompts.py
server/prompts/data_refinement/: completeness_evaluation.py
server/prompts/decisions/: decision_prompts.py
server/prompts/memory/: __init__.py  analysis_enhancement.py  context_retrieval.py  decision_making.py  dynamic_type_discovery.md  extraction.py  graph_relationship_extraction.md  instruction_elaboration.py
server/prompts/system/: __init__.py  advanced_capabilities.py  communication_framework.py  confidence_scoring_framework.py  continuous_improvement.py  decision_making_framework.py  examples.py  guardrail.py  incident_response_structure.py  output_json_schema.py  principles.py  quality_assurance.py  response_protocols.py
server/prompts/workflows/: alertmanager.py  analysis.py  analyzer_prompts.py  categorization.py  loki.py  planning.py  processing.py  processor_prompts.py  response_type.py  result_formatting.py  result_guidance.py  tool_decision.py
server/rag/: chunker.py  document_parser.py  models.py  qdrant_client.py  service.py
server/routes/: __init__.py  alerts.py  chat.py  documents.py  health.py
server/tools/: __init__.py
server/tools/alertmanager/: __init__.py  models.py  service.py
server/tools/loki/: __init__.py  models.py  service.py
server/tools/prometheus/: __init__.py  models.py  service.py
server/utils/: __init__.py  data_reduction.py  json_parser.py
slides/paladin-ai/: package.json  slides.md
webhook/: pyproject.toml  server.py
