[project]
name = "paladin-ai"
version = "0.1.0"
description = "AI-Powered Monitoring & Incident Response Platform"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Barun Debnath", email = "barundebnath91@gmail.com"}
]
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/d-cryptic/paladin-ai"
Repository = "https://github.com/d-cryptic/paladin-ai"

[tool.uv.workspace]
members = [
    "server",
    "cli",
    "webhook",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompts"]
