[project]
name = "paladin-discord-mcp"
version = "0.1.0"
description = "Discord MCP server for PaladinAI integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "mem0ai>=0.1.0",
    "openai>=1.0.0",
    "qdrant-client>=1.7.0",
    "neo4j>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
discord-mcp = "discord_mcp.server:main"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["discord_mcp"]